k8s/talos/apps/bigd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bigd-service
  namespace: bigd
spec:
  selector:
    app: bigd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
